Updated the overflow bug for tasks and container

--- a/style.css
+++ b/style.css
@@ -26,14 +26,14 @@ body{
     border:2px solid #ffffff;
     border-radius: 20px;
     /* box-shadow: 0 2px 20px solid rgba(184, 178, 178, 0.7); */
-    height: 90%;
     width:37em;
 }
 
 .tasks{
     border:1px solid #e0d5d5;
     border-radius: 10px;
-    overflow-y:auto;
+    overflow-y:scroll;
+    height:max-content;
 }
 
 .content--ol{
